tests/baselines/reference/exportDeclareClass1.errors.txt
==== tests/cases/compiler/exportDeclareClass1.ts (4 errors) ====
        export declare class eaC {
            static tF() { };
                        ~
!!! error TS1037: A function implementation cannot be declared in an ambient context.
                           ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
            static tsF(param:any) { };
                                  ~
!!! error TS1037: A function implementation cannot be declared in an ambient context.
                                     ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
        };
    	
    	export declare class eaC2 {
            static tF();
            static tsF(param:any);
        };